Fixed Back button mobile style

--- a/apps/light/src/clients/vanharen/landingpage/lite/styles/main.scss
+++ b/apps/light/src/clients/vanharen/landingpage/lite/styles/main.scss
@@ -1242,7 +1242,9 @@ ul.price {
             background-color: $orange-color;
             font-family: $deichmann-font;
             font-weight: 100;
+            font-size: 25px;
             color: white;
+            text-shadow: none;
         }
 
         .image-with-tagged-products .info {
